--- a/src/index.scss
+++ b/src/index.scss
@@ -73,3 +73,9 @@ body {
 .landing .main-content {
   height: calc(100vh - 66px);
 }
+
+// .right-land{
+//   background: url('./assets/landing.png');
+
+// }
+
